2010-02-17  Joe English  <jenglish@users.sourceforge.net>

	* generic/tkMenu.c: Defer TkMenuOptionTables cleanup
	to CallWhenDeleted() time, to ensure that the record
	doesn't get freed until after all widget instance commands
	have been deleted (Fixes [Bug#2952745]).

2010-02-17  Jan Nijtmans  <nijtmans@users.sf.net>

    * generic/tk.decls       CONSTify everything related to Tk_ConfigSpec
    * generic/tk.h
    * generic/tkCanvArc.c    Many tables can now be put in const memory
    * generic/tkCanvas.c
    * generic/tkCanvBmap.c
    * generic/tkCanvImg.c
    * generic/tkCanvLine.c
    * generic/tkCanvPoly.c
    * generic/tkCanvPs.c
    * generic/tkCanvText.c
    * generic/tkCanvWind.c
    * generic/tkImgBmap.c
    * generic/tkImgPhoto.c
    * generic/tkOldConfig.c
    * generic/tkRectOval.c
    * generic/tkScrollbar.c
    * generic/tkScrollbar.h
    * generic/tkDecls.h       (regenerated)
    * doc/CanvTkwin.3
    * doc/ConfigWidg.3
    * doc/CrtItemType.3
    * win/tkWinScrlbr.c
    * carbon/tkMacOSXScrlbr.c
    * macosx/tkMacOSXScrlbr.c

2010-02-16  Jan Nijtmans  <nijtmans@users.sf.net>

    * generic/tkWindow.c    Reverted rename from tkStubs to tkConstStubs
    * generic/tkStubInit.c  (regenerated)
    * generic/tkArgv.c      make defaultTable const
    * generic/tkScrollbar.c Store default for "-with" in static non-const space
    * win/tkWinInt.h        make tkWinProcs const, and 5
    * win/tkWinX.c          procs MODULE_SCOPE
    * win/tkWinColor.c      make sysColors const
    * win/tkWinKey.c        make keymap const
    * win/tkWinScrlbr.c     Simplify copying of "-with" default value.
    * unix/tkUnixWm.c       make TkSetTransientFor static
    * tests/textImage.test  textImage-1.13 depends on hash-order

2010-02-12  Jan Nijtmans  <nijtmans@users.sf.net>

    * win/tcl.m4           use -pipe for gcc on win32
    * win/configure        (mingw/cygwin) (regenerated)
    * unix/tkUnixColor.c   make sure that TkpCmapStressed is exported